@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package io.spring.start.site.extension.build.maven;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.spring.initializr.generator.buildsystem.maven.MavenBuild;
 import io.spring.initializr.generator.spring.build.BuildCustomizer;
@@ -39,7 +38,7 @@ class AnnotationProcessorExclusionBuildCustomizer implements BuildCustomizer<Mav
 	private static final VersionRange SPRING_BOOT_2_4_0_M3_0R_LATER = VersionParser.DEFAULT.parseRange("2.4.0-M3");
 
 	private static final List<String> KNOWN_ANNOTATION_PROCESSORS = Collections
-			.singletonList("configuration-processor");
+		.singletonList("configuration-processor");
 
 	private final InitializrMetadata metadata;
 
@@ -55,12 +54,15 @@ class AnnotationProcessorExclusionBuildCustomizer implements BuildCustomizer<Mav
 		if (!build.plugins().has("org.springframework.boot", "spring-boot-maven-plugin")) {
 			return;
 		}
-		List<io.spring.initializr.generator.buildsystem.Dependency> dependencies = build.dependencies().ids()
-				.filter(this::isAnnotationProcessor)
-				.filter((id) -> !this.hasSmartExclude || !KNOWN_ANNOTATION_PROCESSORS.contains(id))
-				.map((id) -> build.dependencies().get(id)).collect(Collectors.toList());
+		List<io.spring.initializr.generator.buildsystem.Dependency> dependencies = build.dependencies()
+			.ids()
+			.filter(this::isAnnotationProcessor)
+			.filter((id) -> !this.hasSmartExclude || !KNOWN_ANNOTATION_PROCESSORS.contains(id))
+			.map((id) -> build.dependencies().get(id))
+			.toList();
 		if (!dependencies.isEmpty()) {
-			build.plugins().add("org.springframework.boot", "spring-boot-maven-plugin", (plugin) -> plugin
+			build.plugins()
+				.add("org.springframework.boot", "spring-boot-maven-plugin", (plugin) -> plugin
 					.configuration((configuration) -> configuration.configure("excludes", (excludes) -> {
 						for (io.spring.initializr.generator.buildsystem.Dependency dependency : dependencies) {
 							excludes.add("exclude", (exclude) -> {
